--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^12.4.7",
     "next": "^14.0.4",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-spring-carousel": "^2.0.19",
     "swiper": "^11.1.11",
     "typescript": "^5.3.3"
